I finished the layout of the first page and now only editing part is lef.t

--- a/index.html
+++ b/index.html
@@ -5,30 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
 </head>
-<body bgcolor="FBF9F4">
- <table>   
+<body bgcolor="FBF9F4" link="#ff0000" alink="#ff0000" vlink="#ff0000">
     <table>
         <tr>
             <td><img src="./assets/images/Screenshot (210).png" alt=""></td>
             <td>
-                &nbsp;&nbsp;&nbsp;&nbsp;<label for="">Blog</label>&nbsp; &nbsp;
-                <label for="">Talks</label></a>&nbsp; &nbsp;
-                <label for="">About</label></a>&nbsp; &nbsp;
-                <label for="">Contact</label>&nbsp; &nbsp;
-                <img src="./assets/images/moon (2).PNG" alt="search icon">&nbsp; &nbsp;
-                <img src="./assets/images/moon (1).PNG" alt="moon icon">&nbsp; &nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;<label for="">BLOG</label>&nbsp; &nbsp;
+                <label for="">TALKS</label></a>&nbsp; &nbsp;
+                <label for="">ABOUT</label></a>&nbsp; &nbsp;
+                <label for="">CONTACT</label>&nbsp; &nbsp;
+                <img src="./assets/images/search.PNG" alt="search icon">&nbsp; &nbsp;
+                <img src="./assets/images/moon.PNG" alt="moon icon">&nbsp; &nbsp;
                 <br><br>
-                <img src="./assets/images/red_line.PNG" alt="">
+                <hr color="red">
+                <!-- <img src="./assets/images/red_line.PNG" alt=""> -->
             </td>
         </tr>
     </table>
-    <table cellspacing="40px">
+    <table cellpadding="40px" cellspacing="20px">
         <tr>
             <td>
                 <img src="./assets/images/icon.png" alt="Friend" width="250px" height="250px"><br>
                 <h3 align="center">Abenezer Fekadu</h3>
                 <p align="center">Addis Ababa, Second Year Student</p>
-                <p align="center">Web Design</p>
+                <p align="center"> <a href="">Web Design</a></p>
             </td>
             <td>
                 <h2>Slice Of My Story</h2>
@@ -49,7 +49,7 @@
             </td>
         </tr>
     </table>
-    <table cellspacing="30px">
+    <table cellpadding="30px">
         <tr>
             <td>
                 <img src="./assets/images/fly.PNG" alt="">
@@ -57,40 +57,102 @@
                 <img src="./assets/images/git.PNG" alt="">
                 <img src="./assets/images/i.PNG" alt="">
                 <img src="./assets/images/id.PNG" alt="">
-                <img src="./assets/images/in.PNG" alt="">
+                <!-- <img src="./assets/images/in.PNG" alt=""> -->
                 <img src="./assets/images/girl.PNG" alt="">
                 <br>
                <p align="center"><img src="./assets/images/gooogle.PNG" alt=""></p>
             </td>
             <td>
-                <h2>Interests</h2>
-                <ul>
-                    <li>Data science</li>
-                    <li>Statistics</li>
-                    <li>Predictive Modeling and Machine Learning</li>
-                    <li>Reproducible research</li>
-                    <li>Education</li>
-                    <li>Parenting</li>
-                </ul>
-            </td>
-            <td>
-                <h2>Education</h2>
-                <ul>
-                    <li>PhD in Developmental Psychology & Quantitative Methods, 2008 <br>
-                        <p>Vanderbilt University</p>
-                    </li>
-                    <li>MSc in Developmental Psychology, 2005 <br>
-                        <p>Vanderbilt University</p>
-                    </li>
-                    <li>BSc in Applied Psychology, 2002<br>
-                        <p>Georgia Institute of Technology</p>
-                    </li>
-                </ul>
+                <table>
+                    <tr>
+                        <td>
+                            <h2>Interests</h2>
+                            <ul>
+                                <li>Data science</li>
+                                <li>Statistics</li>
+                                <li>Predictive Modeling and Machine Learning</li>
+                                <li>Reproducible research</li>
+                                <li>Education</li>
+                                <li>Parenting</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <h2>Education</h2>
+                            <ul>
+                                <li>PhD in Developmental Psychology & Quantitative Methods, 2008 <br>
+                                <li>Vanderbilt University</li> 
+                                </li>
+                                <li>MSc in Developmental Psychology, 2005 <br>
+                                <li>Vanderbilt University</li>
+                                </li>
+                                <li>BSc in Applied Psychology, 2002<br>
+                                <li>Georgia Institute of Technology</li>  
+                                </li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
             </td>
         </tr>
     </table>
     
+    <table cellpadding="40px" background="./assets/images/desk.jpg">
+        <tr>
+            <td> 
+                <img src="./assets/images/Back_52px.png" alt="">
+            </td>
+            <td>
+                <h2 align="Center">Workshop Feedback</h2>
+                <p align="center">“Alison was knowledgeable but at the same time very approachable. She had a sense of humor and very engaging style that gave me confidence that I can do this.”</p>
+                <p align="center"><input type="submit" value="submit"></p>
+            </td>
+            <td> 
+                <img src="./assets/images/Forward_52px.png" alt="">
+            </td>
+        </tr>
+    </table>
 
-</table>
+        <h2 align="center">Lately</h2>
+    <table cellpadding="70px" cellspacing=""20px>
+        <tr>
+            <td>
+                <h3>FROM MY BLOG</h3><br><br><br><br>
+            </td>
+            <td>
+                <h4>Take a Sad Script & Make it Better: Tidymodels Edition</h4>
+                <p>Taking a sad script and making it better for model cross-validation</p>
+                <p>Last Upadated on Feb 27,2020 : 19 min read</p> 
+
+                <a href="" >SEE ALL POSTS &rsaquo;</a>
+
+            </td>
+            <td>
+                <img src="./assets/images/rounded_corners (2).jpg" alt=""><br><br><br><br>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <h3>TALKS/WORKSHOPS</h3><br><br><br><br>
+            </td>
+            <td>
+                <h4>Introduction to Machine Learning with the Tidyverse</h4>
+                <p>rstudio::conf(2020) two-day workshop to introduce the basics of machine learning and tidymodels.</p>
+                <p>Jan 27, 2020 9:00 AM — 5:00 PM</p> 
+
+                <a href="" >SEE ALL TALKS &rsaquo;</a>
+
+            </td>
+            <td>
+                <img src="./assets/images/rounded_corners (2).jpg" alt=""><br><br><br><br>
+            </td>
+        </tr>
+    </table>
+        <br>
+        <br>
+        <br>
+        <p align="center">
+            <a href="">LICENSE:CC-BY-SA</a>
+        </p>
+        <p align="center">&#169;Abenezer Fekadu, 2020 · Made with <a href="">&#9825;</a>, , the <a href="">blogdown</a> package, and the <a href="">Academic theme</a> for <a href="">Hugo</a> .  &nbsp;&nbsp;&nbsp;&nbsp;</p>
 </body>
 </html>
