The welcome or the first page is completed and now moving on to the second page.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
 </head>
-<body bgcolor="FBF9F4" link="#ff0000" alink="#ff0000" vlink="#ff0000">
+<body bgcolor="FBF9F4" link="#ff0000" alink="#ff0000" vlink="#ff0000" align="justify">
     <table>
         <tr>
             <td><img src="./assets/images/Screenshot (210).png" alt=""></td>
@@ -14,8 +14,8 @@
                 <label for="">TALKS</label></a>&nbsp; &nbsp;
                 <label for="">ABOUT</label></a>&nbsp; &nbsp;
                 <label for="">CONTACT</label>&nbsp; &nbsp;
-                <img src="./assets/images/search.PNG" alt="search icon">&nbsp; &nbsp;
-                <img src="./assets/images/moon.PNG" alt="moon icon">&nbsp; &nbsp;
+                <img src="./assets/images/Search_24px.png" alt="search icon">&nbsp; &nbsp;
+                <img src="./assets/images/Moon Symbol_24px.png" alt="moon icon">&nbsp; &nbsp;
                 <br><br>
                 <hr color="red">
                 <!-- <img src="./assets/images/red_line.PNG" alt=""> -->
@@ -29,16 +29,22 @@
                 <h3 align="center">Abenezer Fekadu</h3>
                 <p align="center">Addis Ababa, Second Year Student</p>
                 <p align="center"> <a href="">Web Design</a></p>
+                <a href=""><img src="./assets/images/Facebook_30px_1.png" alt=""></a>&nbsp;
+                <a href=""><img src="./assets/images/Twitter_30px.png" alt=""></a>&nbsp;
+                <a href=""><img src="./assets/images/GitHub_30px.png" alt=""></a>&nbsp;
+               <a href=""><img src="./assets/images/Gmail_30px.png" alt=""></a>&nbsp;
+               <a href=""><img src="./assets/images/YouTube 2_30px_1.png" alt=""></a>&nbsp;
+               <a href=""><img src="./assets/images/Instagram_30px.png" alt=""></a>
             </td>
             <td>
                 <h2>Slice Of My Story</h2>
-                <p>I am a Data Scientist & Professional Educator at RStudio PBC. I am an international keynote <br>
-                    speaker, and I regularly lead workshops and develop online learning materials on topics like <br>
-                    reproducible research, machine learning, and data visualization. My teaching materials have been <br>
+                <p>I am a Data Scientist & Professional Educator at RStudio PBC. I am an international keynote
+                    speaker, and I regularly lead workshops and develop online learning materials on topics like 
+                    reproducible research, machine learning, and data visualization. My teaching materials have been 
                     used by NASA, Pew Research Center, University of Oregon, and now RStudio. I am also a co-author
                     of the book blogdown: Creating Websites with R Markdown. <br><br>
-
-                    I received my PhD in psychology and quantitative methods from Vanderbilt University in 2008. <br>
+                    
+                    I received my PhD in psychology and quantitative methods from Vanderbilt University in 2008.
                     Prior to joining RStudio, I was an Assistant Professor at Arizona State University, and an Associate
                     Professor at Oregon Health & Science University (OHSU). While at OHSU, I was an NIH-funded Principal                    
                     Investigator and the Assistant Director of the Center for Spoken Language Understanding. I was
@@ -52,15 +58,7 @@
     <table cellpadding="30px">
         <tr>
             <td>
-                <img src="./assets/images/fly.PNG" alt="">
-                <img src="./assets/images/Twitter.PNG" alt="">
-                <img src="./assets/images/git.PNG" alt="">
-                <img src="./assets/images/i.PNG" alt="">
-                <img src="./assets/images/id.PNG" alt="">
-                <!-- <img src="./assets/images/in.PNG" alt=""> -->
-                <img src="./assets/images/girl.PNG" alt="">
-                <br>
-               <p align="center"><img src="./assets/images/gooogle.PNG" alt=""></p>
+                <img src="./assets/images/space2.PNG" alt="">
             </td>
             <td>
                 <table>
@@ -96,7 +94,7 @@
         </tr>
     </table>
     
-    <table cellpadding="40px" background="./assets/images/desk.jpg">
+    <table cellpadding="40px" background="./assets/images/desk2.jpg">
         <tr>
             <td> 
                 <img src="./assets/images/Back_52px.png" alt="">
@@ -137,10 +135,22 @@
             <td>
                 <h4>Introduction to Machine Learning with the Tidyverse</h4>
                 <p>rstudio::conf(2020) two-day workshop to introduce the basics of machine learning and tidymodels.</p>
-                <p>Jan 27, 2020 9:00 AM — 5:00 PM</p> 
-
+                <p>Jan 27, 2020 9:00 AM — 5:00 PM . San Francisco, CA</p> 
+                <table cellspacing="10px">
+                    <tr>
+                        <td>
+                            <input type="submit" value="project">
+                        </td>
+                        <td>
+                            <input type="submit" value="website">
+                        </td>
+                        <td>
+                            <input type="submit" value="material">
+                        </td>
+                    </tr>
+                </table>
+                <br>
                 <a href="" >SEE ALL TALKS &rsaquo;</a>
-
             </td>
             <td>
                 <img src="./assets/images/rounded_corners (2).jpg" alt=""><br><br><br><br>
@@ -151,8 +161,12 @@
         <br>
         <br>
         <p align="center">
-            <a href="">LICENSE:CC-BY-SA</a>
+            <a href="">LICENSE:CC-BY-SA <br>
+                <img src="./assets/images/Creative Commons_21px.png" alt=""><img src="./assets/images/User Engagement Male_21px.png" alt=""><img src="./assets/images/Copyleft_21px.png" alt="">
+            </a>
         </p>
-        <p align="center">&#169;Abenezer Fekadu, 2020 · Made with <a href="">&#9825;</a>, , the <a href="">blogdown</a> package, and the <a href="">Academic theme</a> for <a href="">Hugo</a> .  &nbsp;&nbsp;&nbsp;&nbsp;</p>
+        <p align="right"><a href=""><img src="./assets/images/Chevron Up_30px.png" alt=""></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+        <p align="center">&#169;Abenezer Fekadu, 2020 · Made with <a href="">&#9825;</a>, <a href=""><img src="./assets/images/Code Fork_30px.png" alt=""></a>, the <a href="">blogdown</a> package, and the <a href="">Academic theme</a> for <a href="">Hugo</a>.</p>
+
 </body>
 </html>
