--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <br>
         <br>
         <p align="center">
-            <a href="">LICENSE:CC-BY-SA <br>
+            <a href="">LICENSE:CC-BY-SA <br><br>
                 <img src="./assets/images/Creative Commons_21px.png" alt=""><img src="./assets/images/User Engagement Male_21px.png" alt=""><img src="./assets/images/Copyleft_21px.png" alt="">
             </a>
         </p>
