--- a/contact.html
+++ b/contact.html
@@ -24,15 +24,162 @@
         </tr>
     </table>
 
-    <table background="./assets/images/flower.jpg">
-        <p>About Me</p>
+    <table background="./assets/images/flower.jpg" width="100%" height="150px">
+        <tr>
+            <td>
+                <h2 align="center">About me</h2>
+            </td>
+        </tr>
     </table>
-   
+    <table celspacing="20px">
+        <tr>
+            <td>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </td>
+            <td>
+                <p >I am originally from Atlanta, Georgia, and am a proud ramblin’ wreck from Georgia Tech. After college, I studied psychology and quantitative methods, receiving my Ph.D. from Vanderbilt University (2008). I am now a data scientist and professional educator at RStudio. Prior to that, I was an Assistant Professor at Arizona State University, and an Associate Professor at Oregon Health & Science University (OHSU).</p>
+            </td>
+            <td>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </td>
+        </tr>
+        <br>
+        <tr>
+            <td></td>
+            <td>
+                <p align="center"><img src="./assets/images/f.jpg" alt=""></p>
+            </td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>
+                <p>My research focused on health-related applications of Natural Language Processing-based methods, and was funded by the National Institutes of Health, the Oregon Clinical and Translational Research Institute, and Autism Speaks. I have written numerous scientific publications on autism and neurodevelopmental disorders and have presented my research at over 25 international conferences.</p>
+            </td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>
+                <p align="center"><img src="./assets/images/f.jpg" alt=""></p>
+            </td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>
+                <p>While at OHSU, I became an avid user of the statistical programming language R, both in the lab as a Principal Investigator and in the classroom as a professor. I developed a passion for programming and education, and during my tenure at OHSU I developed and taught multiple graduate-level data science courses and workshops. I also trained the Office of Research Impact at the Oregon Clinical & Translational Research Institute to use R, and consulted with the University of Oregon College of Education on the development of a graduate data science specialization track. I received an Excellence in Education award from OHSU in 2018.</p>
+                <p>You can follow my current work for RStudio Education on GitHub. In my free time, I love spending time with my family and my two-year-old daughter. Thank you so much for reading.</p>
+                <br>
+                <hr color="red">
+            </td>
+            <td></td>
+        </tr>
+    </table>
+        <table>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </td>
+                <td>
+                    <table cellspacing="40px">
+                        <tr>
+                            <td>
+                                <h2>Experience&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
+                                <br><br><br><br><br><br><br><br><br><br></br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                            </td>
+                                <td>
+                                    <img src="./assets/images/New Moon_18px.png" alt=""><br>
+                                    &nbsp;<img src="./assets/images/vr.PNG" alt=""><br>
+                                    <img src="./assets/images/Thin Circle_18px.png" alt=""><br>
+                                    &nbsp;<img src="./assets/images/vr.PNG" alt=""><br>
+                                    <img src="./assets/images/Thin Circle_18px.png" alt=""><br>
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                </td>
+                            <td>
+                                <table bgcolor="white">
+                                    <tr>
+                                        <td>
+                                            <h4>Data Scientist & Professional Educator</h4>
+                                            <p>RStudio</p>
+                                            <p>October 2018 – Present  Oregon</p>
+                                        </td>
+                                    </tr>
+                                </table>
+                                <br>
+                                <table bgcolor="white">
+                                    <tr>
+                                        <td>
+                                            <h4>Data Scientist & Professional Educator</h4>
+                                            <p>RStudio</p>
+                                            <p>October 2018 – Present  Oregon</p>
+                                        </td>
+                                    </tr>
+                                </table>
+                                <br>
+                                <table bgcolor="white">
+                                    <tr>
+                                        <td>
+                                            <h4>Data Scientist & Professional Educator</h4>
+                                            <p>RStudio</p>
+                                            <p>October 2018 – Present  Oregon</p>
+                                        </td>
+                                    </tr>
+                                </table>
+                                <br>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="3">
+                                <hr color="red">
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+            <table background="./assets/images/flower.jpg" width="100%" height="150px">
+                <tr>
+                    <td>
+                        <h2 align="center">Get in touch</h2>
+                    </td>
+                </tr>
+            </table>
+
+            <table>
+                <tr>
+                    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </td>
+                    <td>
+                        <table cellspacing="30px" cellpadding="30px">
+                            <tr>
+                                <td>
+                                    <h3>Hi there &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h3>
+                                    <br></br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+                                </td>
+                                <td>
+                                    <form action="mailto:se.abenezer.fekadu@gmail.com" method="post" enctype="utf-8">
+                                        <input type="text" name="name" id="" placeholder="Name" pattern="[A-Za-z]{4,8}" title="Enter 4 to 8 characters" required width="20px"><br><br>
+                                        <input type="email" name="email" id="" placeholder="Email" required title="Enter tour email"><br><br>
+                                        <textarea name="details" id="" cols="50" rows="10" placeholder="Message" ></textarea><br><br>
+                                        <input type="submit" value="send">
+                                    </form>  
+                                        <br>
+                                       <a href=""> <img src="./assets/images/Twitter_31px.png" alt=""></a> DM Me <br>
+                                        <a href=""><img src="./assets/images/Telegram App_31px.png" alt=""></a> Discuss on Telegram <br>
+                                        <a href=""><img src="./assets/images/GitHub_31px.png" alt=""></a> Get Accesss <br>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">
+                                    <hr color="red">
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+            </table>
 
 
-
-
-        <!-- <p align="center"><a href=""><img src="./assets/images/Double Right_30px_1.png" alt=""></a></p>
+        <!-- <p align="center"><a href=""><img src="./assets/images/Double Right_30px_1.png" alt=""></a></p> -->
 <br>
         <p align="center">
             <a href="">LICENSE:CC-BY-SA <br><br>
@@ -40,7 +187,7 @@
             </a>
         </p>
         <p align="right"><a href=""><img src="./assets/images/Chevron Up_30px.png" alt=""></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
-        <p align="center">&#169;Abenezer Fekadu, 2020 · Made with <a href="">&#9825;</a>, <a href=""><img src="./assets/images/Code Fork_30px.png" alt=""></a>, the <a href="">blogdown</a> package, and the <a href="">Academic theme</a> for <a href="">Hugo</a>.</p> -->
+        <p align="center">&#169;Abenezer Fekadu, 2020 · Made with <a href="">&#9825;</a>, <a href=""><img src="./assets/images/Code Fork_30px.png" alt=""></a>, the <a href="">blogdown</a> package, and the <a href="">Academic theme</a> for <a href="">Hugo</a>.</p>
 
 </body>
 </html>
