--- a/project.html
+++ b/project.html
@@ -6,7 +6,9 @@
     <title>Personal website</title>
 </head>
 <body>
-    <body  bgcolor="FBF9F4" link="#ff0000" alink="#ff0000" vlink="#ff0000" align="justify">
+    <body  bgcolor="FBF9F4"  alink="#ff0000" vlink="#ff0000" align="justify">
+
+<!-- This the navigation bar on the top with my name  -->
         <table cellpacing="150px">
             <tr>
                 <td>
@@ -24,8 +26,136 @@
                 </td>
             </tr>
         </table>
-        <label for="" align="center">Projects</label>
-        <h2 align="center">Projects</h2>
-    
+
+<!-- This is for the title project-->
+            <h2 align="center">Projects</h2>
+
+<!-- This is for the red option on the top -->
+                        <table height="10px" cellspacing="30px" cellpadding="30px">
+                            <tr>
+                                <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </td>
+
+                                <td>
+                                    <table bgcolor="red">
+                                        <tr>
+                                            <td>
+                                                <p align="right"> all | software | workshop | course | book</p>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </td>
+                            </tr>
+                        </table>
+            
+<!-- This is for the gallary layout -->
+        <table cellspacing="10px">
+            <tr>
+                <td>
+                    <table bgcolor="white">
+                        <tr>
+                            <td>
+                                <img src="./assets/images/f.jpg" alt=""><br>
+                                <p>Eating food makes me wanna eat more.</p>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                    <table bgcolor="white">
+                        <tr>
+                            <td>
+                                <img src="./assets/images/f.jpg" alt=""><br>
+                                <p>Eating food makes me wanna eat more.</p>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                    <table bgcolor="white">
+                        <tr>
+                            <td>
+                                <img src="./assets/images/f.jpg" alt=""><br>
+                                <p>Eating food makes me wanna eat more.</p>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <table bgcolor="white">
+                        <tr>
+                            <td>
+                                <img src="./assets/images/f.jpg" alt=""><br>
+                                <p>Eating food makes me wanna eat more.</p>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                    <table bgcolor="white">
+                        <tr>
+                            <td>
+                                <img src="./assets/images/f.jpg" alt=""><br>
+                                <p>Eating food makes me wanna eat more.</p>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                    <table bgcolor="white">
+                        <tr>
+                            <td>
+                                <img src="./assets/images/f.jpg" alt=""><br>
+                                <p>Eating food makes me wanna eat more.</p>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <table bgcolor="white">
+                        <tr>
+                            <td>
+                                <img src="./assets/images/f.jpg" alt=""><br>
+                                <p>Eating food makes me wanna eat more.</p>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                    <table bgcolor="white">
+                        <tr>
+                            <td>
+                                <img src="./assets/images/f.jpg" alt=""><br>
+                                <p>Eating food makes me wanna eat more.</p>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                    <table bgcolor="white">
+                        <tr>
+                            <td>
+                                <img src="./assets/images/f.jpg" alt=""><br>
+                                <p>Eating food makes me wanna eat more.</p>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+
+<!-- This is the footers logo and other features -->
+        <br>
+            <p align="center">
+                <a href="">LICENSE:CC-BY-SA <br><br>
+                    <img src="./assets/images/Creative Commons_21px.png" alt=""><img src="./assets/images/User Engagement Male_21px.png" alt=""><img src="./assets/images/Copyleft_21px.png" alt="">
+                </a>
+            </p>
+        <p align="right"><a href=""><img src="./assets/images/Chevron Up_30px.png" alt=""></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+        <p align="center">&#169;Abenezer Fekadu, 2020 · Made with <a href="">&#9825;</a>, <a href=""><img src="./assets/images/Code Fork_30px.png" alt=""></a>, the <a href="">blogdown</a> package, and the <a href="">Academic theme</a> for <a href="">Hugo</a>.</p>
+
 </body>
 </html>
