--- a/index.html
+++ b/index.html
@@ -6,22 +6,26 @@
     <title>Personal Website</title>
 </head>
 <body bgcolor="FBF9F4" link="#ff0000" alink="#ff0000" vlink="#ff0000" align="justify">
+<!-- This is the header navigation bar -->
     <table>
         <tr>
-            <td><img src="./assets/images/Screenshot (210).png" alt=""></td>
             <td>
-                &nbsp;&nbsp;&nbsp;&nbsp;<label for="">BLOG</label>&nbsp; &nbsp;
-                <label for="">TALKS</label></a>&nbsp; &nbsp;
-                <label for="">ABOUT</label></a>&nbsp; &nbsp;
-                <label for="">CONTACT</label>&nbsp; &nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </td>
+            <td>
+                &nbsp;&nbsp;&nbsp;&nbsp;<a href="blog.htm"><label for="">BLOG</label></a>&nbsp; &nbsp;
+                <a href="talks.html"><label for="">TASKS</label></a>&nbsp; &nbsp;</a>
+                <a href="project.html"><label for="">GALLARY</label></a></a>&nbsp; &nbsp;
+                <a href="contact.html"><label for="">ABOUT / CONTACT</label></a>&nbsp; &nbsp;
                 <img src="./assets/images/Search_24px.png" alt="search icon">&nbsp; &nbsp;
                 <img src="./assets/images/Moon Symbol_24px.png" alt="moon icon">&nbsp; &nbsp;
                 <br><br>
                 <hr color="red">
-                <!-- <img src="./assets/images/red_line.PNG" alt=""> -->
             </td>
         </tr>
     </table>
+
+<!-- This is the photo and the story part-->
     <table cellpadding="40px" cellspacing="20px">
         <tr>
             <td>
@@ -29,36 +33,41 @@
                 <h3 align="center">Abenezer Fekadu</h3>
                 <p align="center">Addis Ababa, Second Year Student</p>
                 <p align="center"> <a href="">Web Design</a></p>
-                <a href=""><img src="./assets/images/Facebook_30px_1.png" alt=""></a>&nbsp;
-                <a href=""><img src="./assets/images/Twitter_30px.png" alt=""></a>&nbsp;
-                <a href=""><img src="./assets/images/GitHub_30px.png" alt=""></a>&nbsp;
-               <a href=""><img src="./assets/images/Gmail_30px.png" alt=""></a>&nbsp;
-               <a href=""><img src="./assets/images/YouTube 2_30px_1.png" alt=""></a>&nbsp;
-               <a href=""><img src="./assets/images/Instagram_30px.png" alt=""></a>
+                <a href=""><img src="./assets/images/Facebook_30px_1.png" alt="facebook icon"></a>&nbsp;
+                <a href=""><img src="./assets/images/Twitter_30px.png" alt="twitter icon"></a>&nbsp;
+                <a href=""><img src="./assets/images/GitHub_30px.png" alt="github icon"></a>&nbsp;
+               <a href=""><img src="./assets/images/Gmail_30px.png" alt="gmile icon"></a>&nbsp;
+               <a href=""><img src="./assets/images/YouTube 2_30px_1.png" alt="youtube icon"></a>&nbsp;
+               <a href=""><img src="./assets/images/Instagram_30px.png" alt="instagram icon"></a>
             </td>
+            <!-- Story -->
             <td>
                 <h2>Slice Of My Story</h2>
-                <p>I am a Data Scientist & Professional Educator at RStudio PBC. I am an international keynote
-                    speaker, and I regularly lead workshops and develop online learning materials on topics like 
-                    reproducible research, machine learning, and data visualization. My teaching materials have been 
-                    used by NASA, Pew Research Center, University of Oregon, and now RStudio. I am also a co-author
-                    of the book blogdown: Creating Websites with R Markdown. <br><br>
+                <p>&nbsp; &nbsp; Hello, every one my name is Abenezer Fekadu and i was born in a small 
+                    town called <a href="https://www.google.com/maps/place/Gursum,+Funyan+Bira/@9.2548144,42.2452967,95704m/data=!3m1!1e3!4m5!3m4!1s0x1631db2bedb13df9:0x3dd9a4393b1ec9f2!8m2!3d9.35129!4d42.397732">Gursum</a>, from my mother Azalech Ababa and my father Fekadu Tefera. so 
+                    when I was born I wasn't alone, i had a twin brother whose name Natnael Fekadu. 
+                    when I was on the age of 5 me and my brother started school, but then we didnt 
+                    know what it was. After learning in KG for two years my family moved on to another
+                    town called <a href="https://en.wikipedia.org/wiki/Babille,_Ethiopia">babile</a>, so we have to move too. Here we continued our school and made it 
+                    to 1st class. when I lived in <a href="https://en.wikipedia.org/wiki/Babille,_Ethiopia">babile</a> I used to have a lot of friends, we used to play 
+                    a lot, even watched movies together. <br><br>
                     
-                    I received my PhD in psychology and quantitative methods from Vanderbilt University in 2008.
-                    Prior to joining RStudio, I was an Assistant Professor at Arizona State University, and an Associate
-                    Professor at Oregon Health & Science University (OHSU). While at OHSU, I was an NIH-funded Principal                    
-                    Investigator and the Assistant Director of the Center for Spoken Language Understanding. I was
-                    nominated for a distinguished faculty award for outstanding teaching, and was awarded an excellence in
-                    graduate education award from the OHSU School of Medicine. My research has been published in Pediatrics,
-                    Autism Research, and other peer-reviewed journals.
+                    The friendship that started there still continues until today. Unitl we finished <a href="">primaryschool</a> 
+                    it was an awesome adventure for me, I had alot of fun. After that since I've grown up,
+                    there were some challenges but thanks to my family, I never got lost. My fmaily were supporting 
+                    me to study hard so I could have a bright future and that is what I did now I am Learning in 
+                    <a href="https://portal.aau.edu.et/">Addis Ababa unviversity</a> which is the best in Ethiopia. And my brother is also with me here following his dream. In 
+                    short, this is a <a href="https://abenezer-fekadu.github.io/First-Html-Practice/">taste of my life story</a>.
                 </p>
             </td>
         </tr>
     </table>
+
+<!-- Intereset and Education -->
     <table cellpadding="30px">
         <tr>
             <td>
-                <img src="./assets/images/space2.PNG" alt="">
+                <img src="./assets/images/space2.PNG" alt="space icon">
             </td>
             <td>
                 <table>
@@ -66,27 +75,20 @@
                         <td>
                             <h2>Interests</h2>
                             <ul>
-                                <li>Data science</li>
-                                <li>Statistics</li>
+                                <li>Artificial Intelligence</li>
+                                <li>Web Development</li>
                                 <li>Predictive Modeling and Machine Learning</li>
-                                <li>Reproducible research</li>
+                                <li>Cyber Security</li>
                                 <li>Education</li>
-                                <li>Parenting</li>
+                                <li>Adventures</li>
                             </ul>
                         </td>
                         <td>
                             <h2>Education</h2>
-                            <ul>
-                                <li>PhD in Developmental Psychology & Quantitative Methods, 2008 <br>
-                                <li>Vanderbilt University</li> 
-                                </li>
-                                <li>MSc in Developmental Psychology, 2005 <br>
-                                <li>Vanderbilt University</li>
-                                </li>
-                                <li>BSc in Applied Psychology, 2002<br>
-                                <li>Georgia Institute of Technology</li>  
-                                </li>
-                            </ul>
+                                <img src="./assets/images/Student Male_21px.png" alt="Undergratuate icon"> &nbsp;&nbsp;Second Year AAIT Student <br>
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://portal.aau.edu.et/">Addis Ababa unviversity</a><br><br>
+                                <img src="./assets/images/Student Male_21px.png" alt="Student icon"> &nbsp;&nbsp;Software Engineering Undergraduate <br>
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://portal.aau.edu.et/">Addis Ababa unviversity</a><br><br>
                         </td>
                     </tr>
                 </table>
@@ -94,10 +96,11 @@
         </tr>
     </table>
     
-    <table cellpadding="40px" background="./assets/images/desk2.jpg">
+<!-- Central picture -->
+    <table cellpadding="40px" background="./assets/images/desk3.jpg">
         <tr>
             <td> 
-                <img src="./assets/images/Back_52px.png" alt="">
+                <img src="./assets/images/Back_52px.png" alt="backward icon">
             </td>
             <td>
                 <h2 align="Center">Workshop Feedback</h2>
@@ -105,37 +108,47 @@
                 <p align="center"><input type="submit" value="submit"></p>
             </td>
             <td> 
-                <img src="./assets/images/Forward_52px.png" alt="">
+                <img src="./assets/images/Forward_52px.png" alt="forward icon">
             </td>
         </tr>
     </table>
 
+<!-- header for the blogs -->
         <h2 align="center">Lately</h2>
+
+<!-- tabel for the contents -->
     <table cellpadding="70px" cellspacing=""20px>
         <tr>
             <td>
-                <h3>FROM MY BLOG</h3><br><br><br><br>
+                <big>
+                    <label for="">FROM MY BLOG</label>
+                </big>
+                <br><br><br><br>
             </td>
             <td>
-                <h4>Take a Sad Script & Make it Better: Tidymodels Edition</h4>
-                <p>Taking a sad script and making it better for model cross-validation</p>
-                <p>Last Upadated on Feb 27,2020 : 19 min read</p> 
 
-                <a href="" >SEE ALL POSTS &rsaquo;</a>
+                <h4>Make Your Body &amp; Mind Strong: </h4>
+                <p>Working out is essential in order to relax your muscles and fibers, which increases your reflexses.</p>
+                <p>Last Upadated on Mar 12, 2020 : 19 min read</p> 
+
+                <a href="blog.htm" >SEE ALL POSTS &rsaquo;</a>
 
             </td>
             <td>
-                <img src="./assets/images/rounded_corners (2).jpg" alt=""><br><br><br><br>
+                <img src="./assets/images/rounded_corners (2).jpg" alt="workout imageS"><br><br><br><br>
             </td>
         </tr>
         <tr>
             <td>
-                <h3>TALKS/WORKSHOPS</h3><br><br><br><br>
+                <big>
+                    <label for="">TASKS/WORKSHOPS</label>
+                </big>
+                <br><br><br><br>
             </td>
             <td>
-                <h4>Introduction to Machine Learning with the Tidyverse</h4>
-                <p>rstudio::conf(2020) two-day workshop to introduce the basics of machine learning and tidymodels.</p>
-                <p>Jan 27, 2020 9:00 AM — 5:00 PM . San Francisco, CA</p> 
+                <h4>Introduction to Python UI with Abenezer</h4>
+                <p> one-month workshop to introduce the basics of Python tkinter and other programing languages.</p>
+                <p>Feb 29, 2020 9:00 AM — 5:00 PM . Addis Ababa, 6 killo</p> 
                 <table cellspacing="10px">
                     <tr>
                         <td>
@@ -150,23 +163,25 @@
                     </tr>
                 </table>
                 <br>
-                <a href="" >SEE ALL TALKS &rsaquo;</a>
+                <a href="talks.html" >SEE ALL TASKS &rsaquo;</a>
             </td>
             <td>
                 <img src="./assets/images/rounded_corners (2).jpg" alt=""><br><br><br><br>
             </td>
         </tr>
     </table>
-        <br>
+<!-- Footer part with the logos -->
+ 
         <br>
         <br>
         <p align="center">
-            <a href="">LICENSE:CC-BY-SA <br><br>
+            <a href="">LICENSE:CC-BY-SA <br>
                 <img src="./assets/images/Creative Commons_21px.png" alt=""><img src="./assets/images/User Engagement Male_21px.png" alt=""><img src="./assets/images/Copyleft_21px.png" alt="">
             </a>
         </p>
-        <p align="right"><a href=""><img src="./assets/images/Chevron Up_30px.png" alt=""></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+<!-- Bottom links -->
         <p align="center">&#169;Abenezer Fekadu, 2020 · Made with <a href="">&#9825;</a>, <a href=""><img src="./assets/images/Code Fork_30px.png" alt=""></a>, the <a href="">blogdown</a> package, and the <a href="">Academic theme</a> for <a href="">Hugo</a>.</p>
+        <p align="right"><a href=""><img src="./assets/images/Chevron Up_30px.png" alt=""></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 
 </body>
 </html>
